Added more items and customization